--- a/UiT.Blazor.Ordsky/Pages/Konfig.razor
+++ b/UiT.Blazor.Ordsky/Pages/Konfig.razor
@@ -1,4 +1,5 @@
 ﻿@page "/konfig"
+@using MudBlazor.Utilities
 <PageHeading Title="Sett opp for ordsky" Heading="Sett opp for ordsky"></PageHeading>
 
 <MudPaper Class="ma-4 pa-4" Elevation="3">
@@ -18,12 +19,10 @@
 
 </MudPaper>
 <MudPaper Class="ma-4 pa-4" Elevation="3">
-    <MudGrid>
-        <MudItem xs="12" Style="align-content:center">
+    <MudStack>
             <MudText Typo="Typo.h5">Ordskyen</MudText>
-        </MudItem>
 
-        <MudItem xs="6" Style="align-content:center">
+
             <MudSelect Label="Canvas størrelse" T="Components.Model.CanvasSize" MultiSelection="false" ToStringFunc="@converter_CanvasSize" @bind-Value="@(_OrdSky.CanvasSize)">
                 @foreach (Components.Model.CanvasSize c in Components.MyOrdskyLoader.LoadCanvasSizes())
                 {
@@ -31,38 +30,39 @@
                 }
             </MudSelect>
             obs: Funker ikke
-        </MudItem>
 
-        <MudItem xs="6" Style="align-content:center">
-            <MudSelect Label="Canvas bakgrunnsfarge" T="Components.Model.CanvasColor" MultiSelection="false" ToStringFunc="@converter_CanvasColor" @bind-Value="@(_OrdSky.CanvasBackgroundColor)">
-                @foreach (Components.Model.CanvasColor c in Components.MyOrdskyLoader.LoadCanvasColors())
-                {
-                        <MudSelectItem Value="@c"></MudSelectItem>
-                }
-            </MudSelect>
-        </MudItem>
-
-        <MudItem xs="6" Style="align-content:center">
+@*        <MudItem xs="6" Style="align-content:center">
             <MudSelect Label="Canvas bakgrunnsfarge" T="Components.Model.CanvasShape" MultiSelection="false" ToStringFunc="@converter_CanvasShape" @bind-Value="@(_OrdSky.CanvasShape)">
                 @foreach (Components.Model.CanvasShape c in Components.MyOrdskyLoader.LoadCanvasShape())
                 {
                     <MudSelectItem Value="@c"></MudSelectItem>
                 }
             </MudSelect>
-        </MudItem>
+        </MudItem>*@
 
-        <MudItem xs="6" Style="align-content:center">
-            
-        </MudItem>
+            <MudColorPicker 
+                Value="_pickerColor"
+                ValueChanged="UpdateSelectedColor"
+                Elevation="3"
+                DisableToolbar="false" 
+                DisableAlpha="false" 
+                DisableColorField="false" 
+                DisablePreview="false" 
+                DisableSliders="false" 
+                DisableInputs="false" 
+                DisableModeSwitch="true" 
+                ColorPickerMode="ColorPickerMode.HEX" 
+                PickerVariant="PickerVariant.Static" />
 
-        <MudItem xs="6" Style="align-content:center">
+
+
+
             <MudSwitch Label="Krymp tekst for å tilpasse" @bind-Checked="_OrdSky.CanvasShrinkToFit" Color="Color.Success"></MudSwitch>
-        </MudItem>
+ 
 
-        <MudItem xs="6" Style="align-content:center">
             <MudSwitch Label="Tegn utenfor canvas" @bind-Checked="_OrdSky.CanvasDrawOutofBounds" Color="Color.Success"></MudSwitch>
-        </MudItem>
-    </MudGrid> 
+
+    </MudStack> 
 </MudPaper>
 
 
@@ -71,18 +71,30 @@
     [Inject] Components.MyOrdsky _OrdSky { get; set; } = null!;
 
     private Components.Model.CanvasSize SelectedCanvasSize { get; set; } = null!;
-    private Components.Model.CanvasColor SelectedCanvasColor { get; set; } = null!;
+    //private Components.Model.CanvasColor SelectedCanvasColor { get; set; } = null!;
+
+    private MudColor _pickerColor = Components.MyOrdskyLoader.DefaultCanvasColor;
+
+
+
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
         if (firstRender)
         {
             SelectedCanvasSize = _OrdSky.CanvasSize;
-            SelectedCanvasColor = _OrdSky.CanvasBackgroundColor;
+            //SelectedCanvasColor = _OrdSky.CanvasBackgroundColor;
+            _pickerColor = _OrdSky.CanvasBackgroundColor;
         }
     }
-    
+
     Func<Components.Model.CanvasSize, string>   converter_CanvasSize    = p => p?.Name;
-    Func<Components.Model.CanvasColor, string>  converter_CanvasColor   = p => p?.Name;
+    //Func<Components.Model.CanvasColor, string>  converter_CanvasColor   = p => p?.Name;
     Func<Components.Model.CanvasShape, string>  converter_CanvasShape   = p => p?.DisplayName;
+
+    public void UpdateSelectedColor(MudColor value)
+    {
+        _pickerColor = value;
+        _OrdSky.CanvasBackgroundColor = value.Value;
+    }
 }
