--- a/UiT.Blazor.Ordsky/Pages/Konfig.razor
+++ b/UiT.Blazor.Ordsky/Pages/Konfig.razor
@@ -11,6 +11,9 @@
         <MudItem Style="align-content:center">
             <MudSwitch Label="Tett liste" @bind-Checked="_OrdSky.DenseTabell" Color="Color.Success"></MudSwitch>
         </MudItem>
+        <MudItem Style="align-content:center">
+            <MudSwitch Label="Alltid sorter ord" @bind-Checked="_OrdSky.SorterOrd" Color="Color.Success"></MudSwitch>
+        </MudItem>
     </MudStack>
 </MudPaper>
 <MudPaper Class="ma-4 pa-4" Elevation="3">
