--- a/UiT.Blazor.Ordsky/Pages/Ordsky.razor
+++ b/UiT.Blazor.Ordsky/Pages/Ordsky.razor
@@ -4,6 +4,8 @@
     @*<canvas id="my_wordcloud_canvas" style="@canvas_styletag"></canvas>*@
 </center>
 
+Hei fra utviklerlunch<br/>
+
 @code {
     [Inject] Components.MyOrdsky OrdSky { get; set; } = null!;
     [Inject] UiT.Components.DI.MyUIManager myUI { get; set; } = null!;
