--- a/UiT.Blazor.Ordsky/MainLayout.razor
+++ b/UiT.Blazor.Ordsky/MainLayout.razor
@@ -17,7 +17,7 @@
         </MudTooltip>
 
         @*<MudImage Alt="The artic univerity of Norway" Src="/images/uit_en.png" Class="ml-2 mr-8"></MudImage>*@
-        <MudText Class="ml-3" Style="font-size:1.1em;font-weight:500;color:#f5f5f5">Ordsky</MudText>
+        <MudText Class="ml-3" Style="font-size:1.1em;font-weight:500;color:#f5f5f5">Ordsky [STATUS: UNDER UTVIKLING]</MudText>
         
         <MudSpacer />
 @*        <MudTooltip Text="Dark mode">
