--- a/UiT.Blazor.Ordsky/Pages/Ordsky.razor
+++ b/UiT.Blazor.Ordsky/Pages/Ordsky.razor
@@ -6,7 +6,7 @@
 
 @code {
     [Inject] Components.MyOrdsky OrdSky { get; set; } = null!;
-    [Inject] UiT.Components.DI.MyUIManager myUI { get; set; } = null!;
+    [Inject] Gutan.Components.DI.MyUIManager myUI { get; set; } = null!;
 
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
