--- a/UiT.Blazor.Ordsky/Pages/Shared/Footer.razor
+++ b/UiT.Blazor.Ordsky/Pages/Shared/Footer.razor
@@ -5,8 +5,8 @@
     AlertTextPosition="AlertTextPosition.Center"
     Dense="true"
     Icon="@Icons.Material.Filled.Info">
-    <MudTooltip Text="Laget av avdeling for IT, UiT Universitetet i Tromsø" Placement="Placement.Top">
-        <i>UiT 2023 - ITA</i>
+    <MudTooltip Text="Laget av Gutan" Placement="Placement.Top">
+        <i>Gutan 2023</i>
     </MudTooltip>
 </MudAlert>
 
