--- a/UiT.Blazor.Ordsky/Pages/StoyOrd.razor
+++ b/UiT.Blazor.Ordsky/Pages/StoyOrd.razor
@@ -1,4 +1,4 @@
-﻿@page "/noise"
+﻿@page "/stoyord"
 
 <PageHeading Title="Ordsky" Heading="Ordsky - Lim inn tekst for å bygge ordsky"></PageHeading>
 <MudStack Style="width:1200px">
