--- a/UiT.Blazor.Ordsky/Pages/Shared/NavMenu.razor
+++ b/UiT.Blazor.Ordsky/Pages/Shared/NavMenu.razor
@@ -2,83 +2,37 @@
 <MudNavMenu Dense="false">
     <MudNavLink OnClick="GotoIndex" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home" Class="mb-4">Startsiden</MudNavLink>
 
-    <MudNavLink OnClick="GotoKeep" Icon="@Icons.Material.Filled.List">Uttrykk</MudNavLink>
-    <MudNavLink OnClick="GotoNoise" Icon="@Icons.Material.Filled.List">St&oslash;yord</MudNavLink>
-    <MudDivider></MudDivider>
-    
+    <MudNavLink OnClick="GotoText" Icon="@Icons.Material.Filled.TextSnippet">Din tekst</MudNavLink>
+    <MudNavLink OnClick="GotoKeep" Icon="@Icons.Material.Filled.Comment">Sammensatte ord</MudNavLink>
+    <MudNavLink OnClick="GotoNoise" Icon="@Icons.Material.Filled.NoiseControlOff">St&oslash;yord</MudNavLink>
+    <MudDivider></MudDivider>    
     <MudNavLink OnClick="GotoOrdliste" Icon="@Icons.Material.Filled.List">Ordliste</MudNavLink>
-
-    @if (OnOrdliste)
-    {
-        <MudNavGroup Expanded="true" Title="Verkt&oslash;y">
-            <MudNavLink OnClick="WordListClear">T&oslash;m liste</MudNavLink>
-            <MudNavLink OnClick="WordListRandom">Legg til jukseord</MudNavLink>
-            <MudNavLink OnClick="Shuffle">Sorter ord</MudNavLink>
-            <MudNavLink OnClick="WordListSave">Lagre listen</MudNavLink>
-        </MudNavGroup>
-    }
 
     <MudNavLink OnClick="GotoConfig" Icon="@Icons.Material.Filled.ConfirmationNumber">Konfigurasjon</MudNavLink>
     <MudNavLink OnClick="GotoOrdsky" Class="mb-4" Icon="@Icons.Material.Filled.CloudDownload">Ordsky</MudNavLink>
-
-    @if (OnOrdsky)
-    {
-        <MudNavGroup Expanded="true" Title="Verkt&oslash;y">
-            <MudNavLink OnClick="ReloadOrdSky">Last inn p&aring; ny</MudNavLink>
-        </MudNavGroup>
-    }
 
 </MudNavMenu>
 
 @code {
     [Inject] NavigationManager Navigation { get; set; } = null!;
     [Inject] Components.MyOrdsky OrdSky { get; set; } = null!;
-    [Inject] UiT.Components.DI.MyUIManager MyUi { get; set; } = null!;
+    [Inject] Gutan.Components.DI.MyUIManager MyUi { get; set; } = null!;
 
-    bool OnOrdsky = false;
-    bool OnOrdliste = false;
-
-    private async Task GotoIndex() { Navigation.NavigateTo("/"); await UpdatePage(); }
-    private async Task GotoOrdliste() { Navigation.NavigateTo("/ordliste"); await UpdatePage(); }
-    private async Task GotoNoise() { Navigation.NavigateTo("/noise"); await UpdatePage(); }
-    private async Task GotoKeep() { Navigation.NavigateTo("/uttrykk"); await UpdatePage(); }
-    private async Task GotoConfig() { Navigation.NavigateTo("/konfig"); await UpdatePage(); }
-    private async Task GotoOrdsky() { Navigation.NavigateTo("/ordsky"); await UpdatePage(); }
+    private async Task GotoIndex()      { Navigation.NavigateTo("/");               await UpdatePage(); }
+    private async Task GotoText()       { Navigation.NavigateTo("/tekst");          await UpdatePage(); }
+    private async Task GotoKeep()       { Navigation.NavigateTo("/sammensatteOrd"); await UpdatePage(); }
+    private async Task GotoNoise()      { Navigation.NavigateTo("/stoyord");        await UpdatePage(); }
+    private async Task GotoOrdliste()   { Navigation.NavigateTo("/ordliste");       await UpdatePage(); }
+    private async Task GotoConfig()     { Navigation.NavigateTo("/konfig");         await UpdatePage(); }
+    private async Task GotoOrdsky()     { Navigation.NavigateTo("/ordsky");         await UpdatePage(); }
 
     private async Task UpdatePage()
     {
         await Task.Delay(100); // Wait for page to load
-
-        OnOrdliste = false;
-        OnOrdsky = false;
-
-        if (Navigation.Uri.Replace(Navigation.BaseUri, "").Equals("ordsky")) OnOrdsky = true;
-        if (Navigation.Uri.Replace(Navigation.BaseUri, "").Equals("ordliste")) OnOrdliste = true;
     }
 
     private async Task ReloadOrdSky()
     {
         await OrdSky.Wc_Draw();
     }
-
-    private void WordListClear()
-    {
-        OrdSky.ClearWords();
-        MyUi.CallRequestRefresh();
-    }
-    private void WordListRandom()
-    {
-        OrdSky.NewRandomList();
-        MyUi.CallRequestRefresh();
-    }
-
-    private void WordListSave()
-    {
-    }
-
-    private void Shuffle()
-    {
-        OrdSky.Shuffle();
-    }
-
 }
