--- a/UiT.Blazor.Ordsky/Pages/Shared/PageNotFound.razor
+++ b/UiT.Blazor.Ordsky/Pages/Shared/PageNotFound.razor
@@ -1,7 +1,7 @@
 ﻿<PageTitle>Siden ikke funnet / Page Not found</PageTitle>
 
 <LayoutView Layout="@typeof(MainLayout)">
-    <PageTitle>UiT 404 - Siden ikke funnet</PageTitle>          
+    <PageTitle>404 - Siden ikke funnet</PageTitle>          
     <MudText Typo="Typo.h1" Class="ma-4">Feil 404 - Siden ikke funnet :: Error 404 - Page not found</MudText>
     <div style="width:700px; margin-left:100px; margin-top:60px">
         <MudAlert Class="ma-4" Severity="Severity.Error" Variant="Variant.Outlined">English: Error 404 - Page not found.<br />Sorry, there's nothing at this address.<br/>The error has been logged.</MudAlert>
