--- a/UiT.Blazor.Ordsky/_Imports.razor
+++ b/UiT.Blazor.Ordsky/_Imports.razor
@@ -5,6 +5,6 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using MudBlazor
-@using UiT.Blazor.Ordsky
-@using UiT.Blazor.Ordsky.Pages
-@using UiT.Blazor.Ordsky.Pages.Shared
+@using Gutan.BlazorWasm.Ordsky
+@using Gutan.BlazorWasm.Ordsky.Pages
+@using Gutan.BlazorWasm.Ordsky.Pages.Shared
