Kommet til konfig

--- a/UiT.Blazor.Ordsky/Pages/Shared/Footer.razor
+++ b/UiT.Blazor.Ordsky/Pages/Shared/Footer.razor
@@ -2,11 +2,11 @@
 <MudAlert Style="position: fixed; bottom: 0; width:200px"
     Class="ma-6 pa-2"
     Severity="Severity.Normal"
-    AlertTextPosition="AlertTextPosition.Center"
+    ContentAlignment="HorizontalAlignment.Center"
     Dense="true"
     Icon="@Icons.Material.Filled.Info">
-    <MudTooltip Text="Laget av Raymond Andreassen" Placement="Placement.Top">
-        <center><i>Raymond Andreassen <br /> 2023</i></center>
+    <MudTooltip Text="Gutan@2023" Placement="Placement.Top">
+        <center><i>Gutan@2023</i></center>
     </MudTooltip>
 </MudAlert>
 
