--- a/UiT.Blazor.Ordsky/Pages/SammensatteOrd.razor
+++ b/UiT.Blazor.Ordsky/Pages/SammensatteOrd.razor
@@ -1,7 +1,7 @@
 ﻿@page "/sammensatteOrd"
 
 <PageHeading Title="Ordsky" Heading="Setninger/Sammensatte ord du vil beholde."></PageHeading>
-<MudStack Style="width:1200px">
+<MudStack Style="width:100%;height:800px;">
     <MudTextField @ref="multilineReference"
                   T="string"
                   Label="Din uttrykk/setninger du vil beholde. Et uttrykk pr linje."
