--- a/UiT.Blazor.Ordsky/_Imports.razor
+++ b/UiT.Blazor.Ordsky/_Imports.razor
@@ -8,3 +8,4 @@
 @using Gutan.BlazorWasm.Ordsky
 @using Gutan.BlazorWasm.Ordsky.Pages
 @using Gutan.BlazorWasm.Ordsky.Pages.Shared
+@using BlazorPro.Spinkit
