--- a/UiT.Blazor.Ordsky/Pages/Stoy.razor
+++ b/UiT.Blazor.Ordsky/Pages/Stoy.razor
@@ -25,17 +25,17 @@
     <ColGroup>
         <col style="width:100px;" />
         <col style="width:100%;" />
-        <col style="width:50px;" />
+        <col style="width:100px;" />
     </ColGroup>
     <HeaderContent>
         <MudTh><MudTableSortLabel SortBy="new Func<Components.Model.ListWord, object>(x=>x.Count)">Antall</MudTableSortLabel></MudTh>
         <MudTh><MudTableSortLabel SortBy="new Func<Components.Model.ListWord, object>(x=>x.Word)">Ord</MudTableSortLabel></MudTh>
-        <MudTh>Fjern</MudTh>
+        <MudTh>Ikke støy</MudTh>
     </HeaderContent>
     <RowTemplate>
         <MudTd DataLabel="Antall">@context.Count</MudTd>
         <MudTd DataLabel="Ord">@context.Word</MudTd>
-        <MudTd DataLabel="Fjern"><MudIcon Icon="@Icons.Material.Filled.Remove" onclick="@(() => DeleteWord(context))" Color="Color.Error"></MudIcon></MudTd>
+        <MudTd DataLabel="Fjern"><MudIcon Icon="@Icons.Material.Filled.Undo" onclick="@(() => DeleteWord(context))" Color="Color.Primary"></MudIcon></MudTd>
     </RowTemplate>
     <RowEditingTemplate>
         <MudTd DataLabel="Count">
