--- a/UiT.Blazor.Ordsky/Pages/Tekst.razor
+++ b/UiT.Blazor.Ordsky/Pages/Tekst.razor
@@ -1,22 +1,28 @@
 ﻿@page "/tekst"
 
 <PageHeading Title="Ordsky" Heading="Din tekst for å bygge ordsky"></PageHeading>
-<MudStack Style="width:100%; height:1000px">
-    <MudTextField 
-        @ref="multilineReference" 
-        T="string" 
-        Label="Kopier inn teksten din"
-        Lines="45"
-        Variant="Variant.Outlined" 
-        Adornment="Adornment.End" 
-        AdornmentIcon="@Icons.Material.Filled.Api" 
-        OnAdornmentClick="@(() => multilineReference.SelectAsync())" 
-        @bind-Value="Ordsky.Text"
-        />
-    <MudButton Variant="Variant.Outlined" Color="Color.Primary" FullWidth="true" Style="height:35px" OnClick="LoadWordList">Last inn i ordlisten</MudButton>
-</MudStack>
 
-<MudOverlay Visible="@IsProcessing"></MudOverlay>
+@if(IsProcessing)
+{
+    <Fold />
+}
+else
+{
+    <MudStack Style="width:100%; height:1000px">
+        <MudTextField 
+            @ref="multilineReference" 
+            T="string" 
+            Label="Kopier inn teksten din"
+            Lines="45"
+            Variant="Variant.Outlined" 
+            Adornment="Adornment.End" 
+            AdornmentIcon="@Icons.Material.Filled.Api" 
+            OnAdornmentClick="@(() => multilineReference.SelectAsync())" 
+            @bind-Value="Ordsky.Text"
+            />
+        <MudButton Variant="Variant.Outlined" Color="Color.Primary" FullWidth="true" Style="height:35px" OnClick="LoadWordList">Legg til i ordlisten</MudButton>
+    </MudStack>
+}
 
 
 @code
@@ -25,10 +31,12 @@
     private MudTextField<string> multilineReference;
     private bool IsProcessing = false;
 
-    private void LoadWordList()
+    private async Task LoadWordList()
     {
         IsProcessing = true;
         this.StateHasChanged();
+        await Task.Delay(100);
+
         Components.MyOrdskyProcessor.Process(Ordsky);
         IsProcessing = false;
         this.StateHasChanged();
